# ewgreaders

./: README.md  pyproject.toml
ewgreaders/: __init__.py  constants.py  utils.py
ewgreaders/datsci/: __init__.py  efd.py  lakes.py  signal.py
ewgreaders/processors/: mooring_processor.py  thermistor_processor.py
ewgreaders/readers/: __init__.py  adcp_reader.py  ctd_reader.py  mooring_reader.py  o2_reader.py  profile_reader.py  thermistor_reader.py
readers/: ctd_reader.py  mooring_reader.py  o2_reader.py  thermistor_reader.py  workspace.ipynb
